# Max3Sat

./: Miniprojekt.sln  README.md
Max3Sat/: CMakeLists.txt  CMax3SatProblem.h  Clause.cpp  Max3Sat.cpp  Rand.cpp  VariableAssignments.cpp  VariableNeighbours.cpp  VariableNeighbours.h
Max3Sat/include/: COptimizer.h  Constants.h
Max3Sat/src/: CMax3SatProblem.cpp  COptimizer.cpp
Miniprojekt/: CMax3SatProblem.cpp  CMax3SatProblem.h  COptimizer.h  Clause.cpp  Clause.h  Constants.cpp  Constants.h  Max3Sat.cpp  Miniprojekt.cpp  Optimizer.cpp  Optimizer.h  Population.cpp  Population.h  Rand.h  VariableAssignments.h
